# ndk

./: .beta-version.swp  .clinerules  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .log.swp  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.json  .repomix-output.txt  .roomodes  .syncpackrc.json  .tenex.json  .test.swp  AI_GUARDRAILS_IMPLEMENTATION.md  AI_GUARDRAILS_UPDATES.md  BUILD.md  CHANGELOG  NDK-HOOKS-EXPERT.md  README.md  REFACTOR-IDEAS.md  REFERENCES.md  RELAY-CONNECTION-REFACTOR.md  REPORT.md  SIG-MOBILE-WORKLET.md  SIG.md  TEST_REFACTOR.md  beta-version  biome.json  bun-migration-plan.md  bun.lockb  cursor-tools.config.json  gemini-feedback.md  jest.config.js  knowledge.md  log  ndk-expert-best-practices.md  (+23 more)
.changelog/: fix-nip22-reply-markers.md
.changeset/: activeuser-change-event.md  add-name-component.md  add-postinstall-setup-script.md  add-profile-lru-cache.md  add-voice-message-wrappers.md  addressable-kind-validation.md  afraid-avocados-rest.md  ai-guardrails-extensible.md  ai-guardrails-ratio-tracking.md  ai-guardrails-remove-single-id-warning.md  auto-detect-cache-module.md  beige-needles-reflect.md  beige-news-kick.md  big-cherries-check.md  big-dodos-brake.md  big-rivers-deliver.md  blossom-package-rename.md  brave-ties-kick.md  brave-ties-listen.md  bright-owls-breathe.md  bright-poets-flash.md  brown-cities-tan.md  cache-binary-lru-performance.md  calm-hornets-care.md  chilly-jars-rhyme.md  clever-bears-knock.md  config.json  (+162 more)
ndk-mobile/sig-check-module/android/: CMakeLists.txt  build.gradle  jsi-schnorr.cpp
(+6163 files in other folders)
